# grpc_upload

./: .gitignore  Cargo.toml  build.rs  readme.md
proto/: upload.proto
src/: client.rs  server.rs
src/libs/: hash.rs  load.rs  mod.rs  save.rs  utils.rs
src/test/: mod.rs  rand_file.rs
