[package]
name = "grpc_uploadfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = { version = "0.7", features = ["transport", "tls"] }
tokio = { version = "1.0", features = [ "rt-multi-thread", "fs", "macros", "sync"] }
prost = "0.10"

md-5 = "0.10"
base16ct = "0.1"
digest = "0.10"

mimalloc = "0.1"
indicatif = {version = "*", features = ["rayon"]}
rand = "0.8"
walkdir = "2"
itertools = "0.10"
bytes = "1.1"
clap = { version = "3", features = ["derive"] }

# logging
log = "0.4"
env_logger = "0.9"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
debug = 0         # No debug info at all
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on Panic
